[UI Views] Check menu() in ZoomView

AppMenuView::menu() documents that it may be null during shutdown, but ZoomView
doesn't check it. Add a check.

BUG=594055

Review URL: https://codereview.chromium.org/1803003003

Cr-Commit-Position: refs/heads/master@{#381329}

Former-commit-id: 03ad6f33b5e9d4f3b22cfd6cda5fab9002fe52d6